--- a/wlyy-yc/src/main/resources/application.yml
+++ b/wlyy-yc/src/main/resources/application.yml
@@ -1,3 +1,14 @@
 server:
   port: 8080
     #ssl配置
+
+---
+spring:
+  profiles: dev
+  datasource:
+    url: jdbc:mysql://172.19.103.77:3306/yichang?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+    username: root
+    password: 123456
+#    driverClassName: com.mysql.jdbc.Driver
+    maxTotal: 500
+    maxIdle: 30
