增加小薇社区跳转

--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -2,3 +2,13 @@
 appId=wxd03f859efdf0873d
 appSecret=2935b54b53a957d9516c920a544f2537
 doctor_invitel_template=oYwur5ewPtp9ynRmkj8Md8tLT0WzK5zL36es_XVljy4
+#WeChat Login route
+#市民E家
+eHome=http://219.139.130.121:8002/hisLogin/wxweb/Login/Hislogin.htm
+eHomeSecret=yyweixin@jkzl
+eHomeCallback=http://ehr.yihu.com/yichang/fd/login/wechat/callback
+#小薇社区
+xiaoWei=http://xiaowei.yihu.com
+#家庭医生
+familyDoctor=http://ehr.yihu.com/yichang/fd
+
