--- a/wlyy-yc/pom.xml
+++ b/wlyy-yc/pom.xml
@@ -15,6 +15,9 @@
     </parent>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
         <!-- 主要依赖库的版本定义 -->
         <springside.version>4.2.3-GA</springside.version>
         <version.jackson>2.6.6</version.jackson>
@@ -151,4 +154,13 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
