--- a/ycapp/manifest.json
+++ b/ycapp/manifest.json
@@ -14,7 +14,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "index.html",
+	"launch_path": "index.html?userId=USERID&appUID=APPUID&orgId=ORGID&appType=APPTYPE&vaildTime=TIMESTAMP&ticket=TICKET",
 	"developer": {
 		"name": "",
 		"email": "",
@@ -639,7 +639,8 @@
 				],
 				"refer": [
 					"html/home/html/main.html",
-					"html/yichangguanli/html/main.html"
+					"html/yichangguanli/html/main.html",
+					"html/yichangguanli/html/doctor_identity_auth.html"
 				],
 				"priority": 5
 			},
@@ -1210,7 +1211,8 @@
 					"js/mui.min.js",
 					"css/mui.min.css",
 					"fonts/mui.ttf",
-					"js/common_http.js"
+					"js/common_http.js",
+					"html/yichangguanli/js/common.js"
 				],
 				"refer": [
 					"html/home/html/main.html",
@@ -1578,7 +1580,8 @@
 					"html/yichangguanli/js/common.js"
 				],
 				"refer": [
-					"html/yichangguanli/html/header1.html"
+					"html/yichangguanli/html/header1.html",
+					"html/login/html/login.html"
 				],
 				"priority": 0
 			},
@@ -1611,7 +1614,8 @@
 					"html/mine/html/set.html",
 					"html/yichangguanli/html/gerenziliao.html",
 					"html/yichangguanli/html/header1.html",
-					"html/yichangguanli/html/set.html"
+					"html/yichangguanli/html/set.html",
+					"html/yichangguanli/html/yishengxinxi.html"
 				],
 				"priority": 0
 			},
@@ -1649,7 +1653,8 @@
 					"js/jquery/2.1.3/jquery.js",
 					"css/mui.min.css",
 					"common/cross/css/cross.css",
-					"html/yichangguanli/html/gerenziliao.html"
+					"html/yichangguanli/html/gerenziliao.html",
+					"html/yichangguanli/html/qianyueshenhe.html"
 				],
 				"refer": [
 					"html/yichangguanli/html/weiqianyuejuminxinxi.html"
@@ -1766,6 +1771,68 @@
 					"common/cross/css/cross.css",
 					"js/common_http.js",
 					"html/yichangguanli/js/base.js"
+				],
+				"refer": [
+					"html/login/html/login.html"
+				],
+				"priority": 0
+			},
+			"html/yichangguanli/html/doctor_identity_auth.html": {
+				"resources": [
+					"common/css/ss-doctor.css",
+					"common/cross/css/cross.ui.css",
+					"common/css/jy-style.css",
+					"common/iconfont/iconfont.css",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"common/cross/css/cross.css",
+					"fonts/mui.ttf",
+					"js/im_new.js",
+					"js/jquery/2.1.3/jquery.js",
+					"html/yichangguanli/js/common.js",
+					"js/common_http.js",
+					"js/template.js",
+					"html/yichangguanli/js/templateHelp.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/yichangguanli/html/qianyueshenhe.html": {
+				"resources": [
+					"widget/scale/scale.js",
+					"html/yichangguanli/css/xinxi.css",
+					"js/upload_preview.js",
+					"html/js/iscroll/iscroll.js",
+					"images/d-male.png",
+					"common/css/jy-style.css",
+					"js/app.js",
+					"common/iconfont/iconfont.css",
+					"html/yichangguanli/js/templateHelp.js",
+					"widget/mobiscroll/2.17.1/js/mobiscroll.js",
+					"widget/mobiscroll/2.17.1/css/mobiscroll.css",
+					"html/yichangguanli/js/common.js",
+					"js/common_http.js",
+					"js/template.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/yichangguanli/html/yishengxinxi.html": {
+				"resources": [
+					"widget/artDialog/6.0.5/js/dialog-plus.min.js",
+					"common/cross/css/cross.ui.css",
+					"images/d-male.png",
+					"widget/artDialog/6.0.5/css/ui-dialog.min.css",
+					"js/app.js",
+					"common/iconfont/iconfont.css",
+					"common/cross/css/cross.css",
+					"html/yichangguanli/js/templateHelp.js",
+					"html/yichangguanli/images/p-bg-top2.png",
+					"js/mui.min.js",
+					"js/jquery/2.1.3/jquery.js",
+					"html/yichangguanli/css/sq-style.css",
+					"js/common_http.js",
+					"js/template.js"
 				],
 				"refer": [],
 				"priority": 0
