--- a/wlyy-yc/pom.xml
+++ b/wlyy-yc/pom.xml
@@ -18,6 +18,7 @@
         <!-- 主要依赖库的版本定义 -->
         <springside.version>4.2.3-GA</springside.version>
         <version.jackson>2.6.6</version.jackson>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -155,6 +156,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${version.jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
     </dependencies>
