--- a/wlyy-yc/src/main/resources/application.yml
+++ b/wlyy-yc/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
 #    driverClassName: com.mysql.jdbc.Driver
     maxTotal: 500
     maxIdle: 30
+bloodSugger:
+  fasting: 00:00-07:59
+  afterBreakfast: 08:00-09:59
+  beforeLunch: 10:00-11:59
+  afterLunch: 12:00-13:59
+  beforeDinner: 14:00-17:59
+  afterDinner: 18:00-19:59
+  beforeSleep: 20:00-23:59
