--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -8,7 +8,7 @@ eHome=http://219.139.130.121:8002/hisLogin/wxweb/Login/Hislogin.htm
 eHomeSecret=yyweixin@jkzl
 eHomeCallback=http://ehr.yihu.com/yichang/fd/login/wechat/callback
 #小薇社区
-xiaoWei=http://xiaowei.yihu.com
+xiaoWeiComunity=http://xwsqtest.yihu.com/tags.aspx
 #家庭医生
 familyDoctor=http://ehr.yihu.com/yichang/fd
 
