--- a/wlyy-yc/pom.xml
+++ b/wlyy-yc/pom.xml
@@ -165,6 +165,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
     </dependencies>
 
