--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -9,6 +9,7 @@ eHomeSecret=yyweixin@jkzl
 eHomeCallback=http://ehr.yihu.com/yichang/fd/login/wechat/callback
 #小薇社区
 xiaoWeiComunity=http://xwsqtest.yihu.com/tags.aspx
+xiaoWeiWeChat=MyFamilyDoctors
 #家庭医生
 familyDoctor=http://ehr.yihu.com/yichang/fd
 
