修改登录逻辑

--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -12,4 +12,6 @@ xiaoWeiComunity=http://xwsqtest.yihu.com/tags.aspx
 xiaoWeiWeChat=MyFamilyDoctors
 #家庭医生
 familyDoctor=http://ehr.yihu.com/yichang/fd
+#健康之路APP
+sso.yihu=http://ssotest.yihu.cn/Portal/SSOCheckAction/checkForApp
 
