登录验证逻辑调通

--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -7,7 +7,8 @@ eHome=http://219.139.130.121:8002/hisLogin/wxweb/Login/Hislogin.htm
 eHomeSecret=yyweixin@jkzl
 eHomeCallback=http://ehr.yihu.com/yichang/fd/login/wechat/callback
 xiaoWeiComunity=http://xwsqtest.yihu.com/tags.aspx
-xiaoWeiWeChat=weixin
-familyDoctor=http://ehr.yihu.com/yichang/fd/html/home/html/login-skip.html
+xiaoWeiWeChat=MyFamilyDoctors
+familyDoctor=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-skip.html
+loginFail=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-fail.html
 sso.yihu=http://ssotest.yihu.cn/Portal/SSOCheckAction/checkForApp
 
