--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -11,4 +11,7 @@ xiaoWeiWeChat=MyFamilyDoctors
 familyDoctor=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-skip.html
 loginFail=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-fail.html
 sso.yihu=http://ssotest.yihu.cn/Portal/SSOCheckAction/checkForApp
+neusoft.ws.doctor=http://219.139.130.106:8884/phis_hubei_ws/ws/doctorWsService?wsdl
+neusoft.ws.person=http://219.139.130.106:8884/phis_hubei_ws/ws/personWsService?wsdl
+
 
