前端接口调用修改

--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -14,4 +14,6 @@ sso.yihu=http://ssotest.yihu.cn/Portal/SSOCheckAction/checkForApp
 neusoft.ws.doctor=http://219.139.130.106:8884/phis_hubei_ws/ws/doctorWsService?wsdl
 neusoft.ws.person=http://219.139.130.106:8884/phis_hubei_ws/ws/personWsService?wsdl
 
+#post device data
+health.data.put=http://localhost:8401/Proxy.MicroCommunity.YCDataTrans.UploadMonitorData
 
