--- a/wlyy-yc/src/main/resources/application.yml
+++ b/wlyy-yc/src/main/resources/application.yml
@@ -32,16 +32,21 @@ spring:
     maxTotal: 500
     maxIdle: 30
 
+
+
 ---
 spring:
   profiles: production
   datasource:
-    url: jdbc:mysql://172.19.103.77:3306/yichang?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
-    username: root
-    password: 123456
+    url: jdbc:mysql://10.27.8.70:3306/familydoctor?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+    username: fd
+    password: fd
 #    driverClassName: com.mysql.jdbc.Driver
     maxTotal: 500
     maxIdle: 30
+server:
+  port: 8883
+  context-path: /fd
 
 ---
 spring:
