--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -10,9 +10,15 @@ xiaoWeiComunity=http://xwsqtest.yihu.com/tags.aspx
 xiaoWeiWeChat=MyFamilyDoctors
 familyDoctor=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-skip.html
 loginFail=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-fail.html
+
+#jkzl service
 sso.yihu=http://ssotest.yihu.cn/Portal/SSOCheckAction/checkForApp
+sso.yihu.gateway=http://service.yihu.com:8085/WSGW/rest
+
+#neusoft web service
 neusoft.ws.doctor=http://219.139.130.106:8884/phis_hubei_ws/ws/doctorWsService?wsdl
 neusoft.ws.person=http://219.139.130.106:8884/phis_hubei_ws/ws/personWsService?wsdl
+neusoft.ws.key=JKZL
 
 #post device data
 health.data.put=http://localhost:8401/Proxy.MicroCommunity.YCDataTrans.UploadMonitorData
