获取个人信息

--- a/wlyy-yc/src/main/resources/system.properties
+++ b/wlyy-yc/src/main/resources/system.properties
@@ -5,11 +5,11 @@ doctor_invitel_template=oYwur5ewPtp9ynRmkj8Md8tLT0WzK5zL36es_XVljy4
 #WeChat Login route
 eHome=http://219.139.130.121:8002/hisLogin/wxweb/Login/Hislogin.htm
 eHomeSecret=yyweixin@jkzl
-eHomeCallback=http://yichangqy.yihu.com/fd/login/wechat/callback
+eHomeCallback=http://localhost:9111/fd/login/wechat/callback
 xiaoWeiComunity=http://xwsq.yihu.com/tags.aspx
 xiaoWeiWeChat=MyFamilyDoctors
-familyDoctor=http://yichangqy.yihu.com/fd/wx/html/home/html/login-skip.html
-loginFail=http:/yichangqy.yihu.com/fd/wx/html/home/html/login-fail.html
+familyDoctor=http://localhost:9111/fd/wx/html/home/html/login-skip.html
+loginFail=http:/localhost:9111/fd/wx/html/home/html/login-fail.html
 
 #jkzl service
 sso.yihu=http://sso.yihu.cn/Portal/SSOCheckAction/checkForApp
