--- a/wlyy-yc/pom.xml
+++ b/wlyy-yc/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>com.yihu.wlyy</groupId>
     <artifactId>FamilyDoctor</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <packaging>war</packaging>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +21,7 @@
         <java.version>1.8</java.version>
         <!-- 主要依赖库的版本定义 -->
         <springside.version>4.2.3-GA</springside.version>
-        <version.jackson>2.8.1</version.jackson>
+        <version.jackson>2.6.6</version.jackson>
         <commons-lang3.version>3.3.2</commons-lang3.version>
     </properties>
 
@@ -30,12 +30,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-databind</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -89,18 +83,12 @@
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
+            <version>4.5.1</version>
             <!--<exclusions>-->
             <!--<exclusion>-->
             <!--<groupId>commons-logging</groupId>-->
@@ -112,7 +100,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
-            <version>4.5.2</version>
+            <version>4.5.1</version>
         </dependency>
 
         <dependency>
@@ -125,16 +113,6 @@
             <artifactId>json-lib</artifactId>
             <version>2.4</version>
             <classifier>jdk15</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>commons-lang</groupId>
-                    <artifactId>commons-lang</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -145,10 +123,6 @@
                 <exclusion>
                     <artifactId>classmate</artifactId>
                     <groupId>com.fasterxml</groupId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-annotations</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -213,17 +187,11 @@
             <artifactId>javax.xml.rpc-api</artifactId>
             <version>1.1</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>commons-discovery</groupId>-->
-            <!--<artifactId>commons-discovery</artifactId>-->
-            <!--<version>0.5</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>commons-logging</groupId>-->
-                    <!--<artifactId>commons-logging</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>commons-discovery</groupId>
+            <artifactId>commons-discovery</artifactId>
+            <version>0.5</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.activation</groupId>
