--- a/wlyy-yc/src/main/resources/system.prod.properties
+++ b/wlyy-yc/src/main/resources/system.prod.properties
@@ -6,7 +6,7 @@ doctor_invitel_template=oYwur5ewPtp9ynRmkj8Md8tLT0WzK5zL36es_XVljy4
 eHome=http://219.139.130.121:8002/hisLogin/wxweb/Login/Hislogin.htm
 eHomeSecret=yyweixin@jkzl
 eHomeCallback=http://yichangqy.yihu.com/fd/login/wechat/callback
-xiaoWeiComunity=http://xwsqtest.yihu.com/tags.aspx
+xiaoWeiComunity=http://xwsq.yihu.com/tags.aspx
 xiaoWeiWeChat=MyFamilyDoctors
 familyDoctor=http://yichangqy.yihu.com/fd/wx/html/home/html/login-skip.html
 loginFail=http://yichangqy.yihu.com/fd/wx/html/home/html/login-fail.html
