修改配置文件

--- a/wlyy-yc/src/main/resources/system.yichang.properties
+++ b/wlyy-yc/src/main/resources/system.yichang.properties
@@ -9,7 +9,7 @@ eHomeCallback=http://ehr.yihu.com/yichang/fd/login/wechat/callback
 xiaoWeiComunity=http://xwsq.yihu.com/tags.aspx
 xiaoWeiWeChat=MyFamilyDoctors
 familyDoctor=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-skip.html
-loginFail=http:/ehr.yihu.com/yichang/fd/wx/html/home/html/login-fail.html
+loginFail=http://ehr.yihu.com/yichang/fd/wx/html/home/html/login-fail.html
 
 #jkzl service
 sso.yihu=http://sso.yihu.cn/Portal/SSOCheckAction/checkForApp
