隐去手工录入功能

--- a/wlyy-yc/src/main/resources/application.yml
+++ b/wlyy-yc/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
     maxTotal: 500
     maxIdle: 30
 system:
-  profile: /system.yichang.properties
+  profile: /system.properties
 ---
 spring:
   profiles: test
